Updated A6 sql :gem: :pencil2:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -47,7 +47,7 @@ This artefact contains the physical schema of the database, the identification a
 
 ```SQL
 SELECT username, email, gender, description
-FROM plenum.UserTable;
+FROM UserTable;
 ```
 
 <table>
@@ -69,7 +69,7 @@ FROM plenum.UserTable;
 
 ```SQL
 SELECT username, email, gender, description
-FROM plenum.UserTable
+FROM UserTable
 WHERE UserTable.idUser= $idUser;
 ```
 
@@ -78,30 +78,6 @@ WHERE UserTable.idUser= $idUser;
       <tr>
           <td><b>Query reference</b></td>
           <td>SELECT03</td>
-      </tr>
-      <tr>
-          <td><b>Query description</b></td>
-          <td>Get All User's Assigned Tasks Name</td>
-      </tr>
-      <tr>
-          <td><b>Query frequency</b></td>
-          <td>hundreds per day</td>
-      </tr>
-    </tbody>
-</table>
-
-```SQL
-SELECT DISTINCT Task.title
-FROM plenum.Assigned, plenum.Task, plenum.UserTable
-WHERE Assigned.idUser=$idUser
-AND Assigned.idTask = Task.idTask;
-```
-
-<table>
-  <tbody>
-      <tr>
-          <td><b>Query reference</b></td>
-          <td>SELECT04</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -115,8 +91,7 @@ AND Assigned.idTask = Task.idTask;
 </table>
 
 ```SQL
-SELECT Project.name
-FROM plenum.Project, plenum.Joined, plenum.UserTable
+SELECT Project.name FROM Project, Joined, UserTable
 WHERE Project.idProject=Joined.idProject
 AND Joined.idUser=UserTable.idUser
 AND UserTable.idUser = $idUser;
@@ -126,7 +101,7 @@ AND UserTable.idUser = $idUser;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT05</td>
+          <td>SELECT04</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -141,15 +116,15 @@ AND UserTable.idUser = $idUser;
 
 ```SQL
 SELECT premium
-FROM plenum.UserTable
-WHERE UserTable.idUser = $idUser;
+FROM UserTable
+WHERE UserTable.idUser= $idUser;
 ```
 
 <table>
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT06</td>
+          <td>SELECT05</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -164,16 +139,15 @@ WHERE UserTable.idUser = $idUser;
 
 ```SQL
 SELECT startDate, duration, name
-FROM plenum.PremiumSignature, plenum.UserTable
-WHERE UserTable.idUser= PremiumSignature.idUser
-AND UserTable.idUser = $idUser;
+FROM PremiumSignature, UserTable
+WHERE UserTable.idUser= PremiumSignature.idUser;
 ```
 
 <table>
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT07</td>
+          <td>SELECT06</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -188,15 +162,15 @@ AND UserTable.idUser = $idUser;
 
 ```SQL
 SELECT banned
-FROM plenum.UserTable
-WHERE UserTable.idUser = $idUser;
+FROM UserTable
+WHERE UserTable.idUser= $idUser;
 ```
 
 <table>
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT08</td>
+          <td>SELECT07</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -210,9 +184,9 @@ WHERE UserTable.idUser = $idUser;
 </table>
 
 ```SQL
-SELECT startDate, duration, motive
-FROM plenum.UserTable, plenum.BannedRecord
-WHERE UserTable.idUser = $idUser
+SELECT UserTable.name, startDate, duration, motive
+FROM UserTable, BannedRecord
+WHERE BannedRecord.idUser = $idUser
 AND UserTable.idUser = BannedRecord.idUser;
 ```
 
@@ -220,7 +194,7 @@ AND UserTable.idUser = BannedRecord.idUser;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT09</td>
+          <td>SELECT08</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -235,7 +209,7 @@ AND UserTable.idUser = BannedRecord.idUser;
 
 ```SQL
 SELECT creationDate, name, description
-FROM plenum.Project
+FROM Project
 WHERE idProject = $idProject;
 ```
 
@@ -243,7 +217,7 @@ WHERE idProject = $idProject;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT10</td>
+          <td>SELECT09</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -258,7 +232,7 @@ WHERE idProject = $idProject;
 
 ```SQL
 SELECT private
-FROM plenum.Project
+FROM Project
 WHERE idProject = $idProject;
 ```
 
@@ -266,7 +240,7 @@ WHERE idProject = $idProject;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT11</td>
+          <td>SELECT10</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -280,10 +254,10 @@ WHERE idProject = $idProject;
 </table>
 
 ```SQL
-SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
-FROM plenum.UserTable, plenum.Joined, plenum.Project
+SELECT DISTINCT username, name, email
+FROM UserTable, Joined, Project
 WHERE Joined.idProject=$idProject
-AND Joined.role = 'Owner'
+AND Joined.role == 'Owner'
 AND Joined.idUser=UserTable.idUser;
 ```
 
@@ -291,7 +265,7 @@ AND Joined.idUser=UserTable.idUser;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT12</td>
+          <td>SELECT11</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -305,10 +279,10 @@ AND Joined.idUser=UserTable.idUser;
 </table>
 
 ```SQL
-SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
-FROM plenum.UserTable, plenum.Joined, plenum.Project
+SELECT DISTINCT username, name, email
+FROM UserTable, Joined, Project
 WHERE Joined.idProject=$idProject
-AND Joined.role = 'Coordinator'
+AND Joined.role =='Coordinator'
 AND Joined.idUser=UserTable.idUser;
 ```
 
@@ -316,7 +290,7 @@ AND Joined.idUser=UserTable.idUser;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT13</td>
+          <td>SELECT12</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -330,10 +304,10 @@ AND Joined.idUser=UserTable.idUser;
 </table>
 
 ```SQL
-SELECT DISTINCT UserTable.username, UserTable.name,UserTable.email
-FROM plenum.UserTable, plenum.Joined, plenum.Project
+SELECT DISTINCT username, name, email
+FROM UserTable, Joined, Project
 WHERE Joined.idProject=$idProject
-AND Joined.role = 'Member'
+AND Joined.role =='Member'
 AND Joined.idUser=UserTable.idUser;
 ```
 
@@ -341,7 +315,7 @@ AND Joined.idUser=UserTable.idUser;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT14</td>
+          <td>SELECT13</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -355,10 +329,10 @@ AND Joined.idUser=UserTable.idUser;
 </table>
 
 ```SQL
-SELECT ForumPost.title, ForumPost.creationDate, ForumPost.lastEditDate
-FROM plenum.ForumPost, plenum.UserTable
+SELECT title, lastEditDate, name
+FROM ForumPost, UserTable
 WHERE ForumPost.idUser = UserTable.idUser
-AND UserTable.idUser = $idUser
+AND UserTable.idUser = $idUser;
 ORDER BY ForumPost.lastEditDate;
 ```
 
@@ -366,11 +340,11 @@ ORDER BY ForumPost.lastEditDate;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT15</td>
+          <td>SELECT14</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
-          <td>Get User's Post Replies</td>
+          <td>Select User Post Replies</td>
       </tr>
       <tr>
           <td><b>Query frequency</b></td>
@@ -380,16 +354,17 @@ ORDER BY ForumPost.lastEditDate;
 </table>
 
 ```SQL
-SELECT DISTINCT Reply.creationDate, Reply.content, Reply.idPost
-FROM plenum.Reply, plenum.ForumPost, plenum.UserTable
-WHERE Reply.idUser = $idUser;
+SELECT UserTable.name, Reply.creationDate, Reply.content, Reply.idPost
+FROM Reply, ForumPost, UserTable
+WHERE Reply.idPost = $idPost
+AND Reply.idUser = UserTable.idUser;
 ```
 
 <table>
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT16</td>
+          <td>SELECT15</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -404,10 +379,9 @@ WHERE Reply.idUser = $idUser;
 
 ```SQL
 SELECT title, deadline
-FROM plenum.UserTable, plenum.Task, plenum.Assigned
-WHERE UserTable.idUser = 1
+FROM UserTable, Task, Assigned,
+WHERE Assigned.idUser = $idUser
 AND Assigned.idUser = UserTable.idUser
-AND Assigned.idTask = Task.idTask
 AND deadline > CURRENT_DATE
 ORDER BY deadline ASC;
 ```
@@ -416,7 +390,7 @@ ORDER BY deadline ASC;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT17</td>
+          <td>SELECT16</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -430,18 +404,18 @@ ORDER BY deadline ASC;
 </table>
 
 ```SQL
-SELECT Task.title, Task.deadline
-FROM plenum.Task, plenum.Project
+SELECT Task.title
+FROM Task, Project
 WHERE Project.idProject = $idProject
 AND Task.idProject = Project.idProject
-AND Task.completed=false;
+AND Task.completed=FALSE;
 ```
 
 <table>
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT18</td>
+          <td>SELECT17</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -455,8 +429,8 @@ AND Task.completed=false;
 </table>
 
 ```SQL
-SELECT Task.title, Task.deadline
-FROM plenum.Task, plenum.Project
+SELECT Task.title
+FROM Task, Project
 WHERE Project.idProject = $idProject
 AND Task.idProject = Project.idProject
 AND Task.completed=true;
@@ -466,7 +440,7 @@ AND Task.completed=true;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT19</td>
+          <td>SELECT18</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -480,20 +454,20 @@ AND Task.completed=true;
 </table>
 
 ```SQL
-SELECT Task.title, Task.deadline
-FROM plenum.Task, plenum.Project
+SELECT Task.title
+FROM Task, Project
 WHERE Project.idProject = $idProject
 AND Task.idProject = Project.idProject
 AND NOT EXISTS (SELECT Assigned.idTask
-              FROM plenum.Assigned
-             WHERE Task.idTask = Assigned.idTask);
+              FROM Assigned
+             WHERE Task.idTask = Assigned.idTask;
 ```
 
 <table>
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT20</td>
+          <td>SELECT19</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -508,7 +482,7 @@ AND NOT EXISTS (SELECT Assigned.idTask
 
 ```SQL
 SELECT title, creationDate,lastEditDate, description, deadline
-FROM plenum.Task
+FROM Task
 WHERE Task.idTask= $idTask;
 ```
 
@@ -516,7 +490,7 @@ WHERE Task.idTask= $idTask;
   <tbody>
       <tr>
           <td><b>Query reference</b></td>
-          <td>SELECT21</td>
+          <td>SELECT20</td>
       </tr>
       <tr>
           <td><b>Query description</b></td>
@@ -530,8 +504,8 @@ WHERE Task.idTask= $idTask;
 </table>
 
 ```SQL
-SELECT Comment.creationDate, Comment.lastEditDate, Comment.content, UserTable.name, Comment.idParent
-FROM plenum.Comment, plenum.UserTable, plenum.Task
+SELECT Comment.creationDate, Comment.lastEditDate, Comment.content, name
+FROM Comment, UserTable, Task
 WHERE Task.idTask = $idTask
 AND Comment.idUser = UserTable.idUser
 AND Comment.idTask = Task.idTask;
@@ -800,8 +774,8 @@ VALUES ($idUser, $idProject, $joinedDate, $role);
 
 ```SQL
 UPDATE UserTable
-  SET password = $password, email = $email, premium  = $premium, banned = $banned, name = $name, gender = $gender, address = $address, institution = $institution, description = $description, birthDate = $birthDate
-  WHERE idUser = $idUser;
+    SET email = $email, userName = $userName, descrition = $description
+    WHERE idUser = $idUser;
 ```
 
 <table>
@@ -823,8 +797,8 @@ UPDATE UserTable
 
 ```SQL
 UPDATE Project
-  SET name = $name, description = $description, private = $private
-  WHERE idProject = $idProject;
+    SET name = $name, description = $description, private = $private
+    WHERE idTask = $idTask;
 ```
 
 <table>
@@ -892,8 +866,8 @@ UPDATE Comment
 
 ```SQL
 UPDATE Task
-  SET lastEditDate = $lastEditDate, title = $title, description = $description, deadline = $deadline, completed = $completed, completionDate = $completionDate
-  WHERE idTask = $idTask;
+    SET lastEditDate = $lastEditDate, title = $title, description = $description, deadline = $deadline, completed = $completed
+    WHERE idTask = $idTask;
 ```
 
 <table>
@@ -1488,11 +1462,11 @@ CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', 
 </table>
 
 ```SQL
-CREATE OR REPLACE FUNCTION plenum.insertPost() RETURNS TRIGGER AS
+CREATE OR REPLACE FUNCTION insertPost() RETURNS TRIGGER AS
 $BODY$
   BEGIN
     IF NOT EXISTS (
-      SELECT * FROM plenum.Joined
+      SELECT * FROM Joined
       WHERE new.idUser = Joined.idUser AND new.idProject = Joined.idProject)
     THEN
       RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
@@ -1502,9 +1476,9 @@ $BODY$
 $BODY$
 LANGUAGE plpgsql;
 
-CREATE TRIGGER onCreatePost BEFORE INSERT ON plenum.ForumPost
+CREATE TRIGGER onCreatePost BEFORE INSERT ON ForumPost
 FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertPost();
+EXECUTE PROCEDURE insertPost();
 ```
 
 <table>
@@ -1521,11 +1495,11 @@ EXECUTE PROCEDURE plenum.insertPost();
 </table>
 
 ```SQL
-CREATE OR REPLACE FUNCTION plenum.insertReply() RETURNS TRIGGER AS
+CREATE OR REPLACE FUNCTION insertReply() RETURNS TRIGGER AS
 $BODY$
   BEGIN
     IF NOT EXISTS (
-      SELECT * FROM plenum.Joined, plenum.ForumPost
+      SELECT * FROM Joined, ForumPost
       WHERE new.idPost = ForumPost.idPost AND ForumPost.idProject = Joined.idProject AND new.idUser = Joined.idUser)
     THEN
       RAISE EXCEPTION 'Only a user who joined a project can reply to posts in its forum.';
@@ -1535,9 +1509,9 @@ $BODY$
 $BODY$
 LANGUAGE plpgsql;
 
-CREATE TRIGGER onCreateReply BEFORE INSERT ON plenum.Reply
+CREATE TRIGGER onCreateReply BEFORE INSERT ON Reply
 FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertReply();
+EXECUTE PROCEDURE insertReply();
 ```
 
 <table>
@@ -1554,11 +1528,11 @@ EXECUTE PROCEDURE plenum.insertReply();
 </table>
 
 ```SQL
-CREATE OR REPLACE FUNCTION plenum.insertComent() RETURNS TRIGGER AS
+CREATE OR REPLACE FUNCTION insertComent() RETURNS TRIGGER AS
 $BODY$
   BEGIN
     IF NOT EXISTS (
-      SELECT * FROM plenum.Joined, plenum.Task
+      SELECT * FROM Joined, Task
       WHERE new.idTask = Task.idTask AND Task.idProject = Joined.idProject AND new.idUser = Joined.idUser)
     THEN
       RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
@@ -1568,9 +1542,9 @@ $BODY$
 $BODY$
 LANGUAGE plpgsql;
 
-CREATE TRIGGER onCreateComment BEFORE INSERT ON plenum.Comment
+CREATE TRIGGER onCreateComment BEFORE INSERT ON Comment
 FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertComent();
+EXECUTE PROCEDURE insertComent();
 ```
 
 <table>
@@ -1587,11 +1561,11 @@ EXECUTE PROCEDURE plenum.insertComent();
 </table>
 
 ```SQL
-CREATE OR REPLACE FUNCTION plenum.insertCloseRequest() RETURNS TRIGGER AS
+CREATE OR REPLACE FUNCTION insertCloseRequest() RETURNS TRIGGER AS
 $BODY$
   BEGIN
     IF NOT EXISTS (
-      SELECT * FROM plenum.Assigned
+      SELECT * FROM Assigned
       WHERE new.idTask = Assigned.idTask AND new.idUser = Assigned.idUser)
     THEN
       RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
@@ -1601,9 +1575,9 @@ $BODY$
 $BODY$
 LANGUAGE plpgsql;
 
-CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON plenum.CloseRequest
+CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON CloseRequest
 FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertCloseRequest();
+EXECUTE PROCEDURE insertCloseRequest();
 ```
 
 <table>
@@ -1620,11 +1594,11 @@ EXECUTE PROCEDURE plenum.insertCloseRequest();
 </table>
 
 ```SQL
-CREATE OR REPLACE FUNCTION plenum.insertTask() RETURNS TRIGGER AS
+CREATE OR REPLACE FUNCTION insertTask() RETURNS TRIGGER AS
 $BODY$
   BEGIN
     IF NOT EXISTS (
-      SELECT * FROM plenum.Joined
+      SELECT * FROM Joined
       WHERE new.idUser = Joined.idUser AND new.idProject = Joined.idProject)
     THEN
       RAISE EXCEPTION 'Only a user who joined a project can create tasks for it.';
@@ -1634,9 +1608,9 @@ $BODY$
 $BODY$
 LANGUAGE plpgsql;
 
-CREATE TRIGGER onCreateTask BEFORE INSERT ON plenum.Task
+CREATE TRIGGER onCreateTask BEFORE INSERT ON Task
 FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertTask();
+EXECUTE PROCEDURE insertTask();
 ```
 
 <table>
@@ -1653,11 +1627,11 @@ EXECUTE PROCEDURE plenum.insertTask();
 </table>
 
 ```SQL
-CREATE OR REPLACE FUNCTION plenum.insertAssigned() RETURNS TRIGGER AS
+CREATE OR REPLACE FUNCTION insertAssigned() RETURNS TRIGGER AS
 $BODY$
   BEGIN
     IF NOT EXISTS (
-      SELECT * FROM plenum.Joined, plenum.Task
+      SELECT * FROM Joined, Task
       WHERE new.idUser = Joined.idUser AND new.idTask = Task.idTask AND Task.idProject = Joined.idProject)
     THEN
       RAISE EXCEPTION 'Only a user who joined a project can be assigned to its tasks.';
@@ -1667,9 +1641,9 @@ $BODY$
 $BODY$
 LANGUAGE plpgsql;
 
-CREATE TRIGGER onCreateAssigned BEFORE INSERT ON plenum.Assigned
+CREATE TRIGGER onCreateAssigned BEFORE INSERT ON Assigned
 FOR EACH ROW
-EXECUTE PROCEDURE plenum.insertAssigned();
+EXECUTE PROCEDURE insertAssigned();
 ```
 
 <table>
@@ -1686,11 +1660,11 @@ EXECUTE PROCEDURE plenum.insertAssigned();
 </table>
 
 ```SQL
-CREATE OR REPLACE FUNCTION plenum.canProjectBePrivate() RETURNS TRIGGER AS
+CREATE OR REPLACE FUNCTION canProjectBePrivate() RETURNS TRIGGER AS
 $BODY$
   BEGIN
   IF NOT EXISTS (
-    SELECT * FROM plenum.Joined, plenum.UserTable
+    SELECT * FROM Joined, UserTable
     WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner' AND Joined.idUser = UserTable.idUser AND UserTable.premium = true)
   THEN
     RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
@@ -1700,10 +1674,10 @@ $BODY$
 $BODY$
 LANGUAGE plpgsql;
 
-CREATE TRIGGER onCreateProject BEFORE UPDATE ON plenum.Project
+CREATE TRIGGER onCreateProject BEFORE UPDATE ON Project
 FOR EACH ROW
 WHEN (NEW.private IS TRUE)
-EXECUTE PROCEDURE plenum.canProjectBePrivate();
+EXECUTE PROCEDURE canProjectBePrivate();
 ```
 
 <table>
@@ -1720,11 +1694,11 @@ EXECUTE PROCEDURE plenum.canProjectBePrivate();
 </table>
 
 ```SQL
-CREATE OR REPLACE FUNCTION plenum.updateUserTable() RETURNS TRIGGER AS
+CREATE OR REPLACE FUNCTION updateUserTable() RETURNS TRIGGER AS
 $BODY$
   BEGIN
   IF EXISTS (
-    SELECT * FROM plenum.Joined, plenum.Project
+    SELECT * FROM Joined, Project
     WHERE new.idUser = Joined.idUser AND Joined.role = 'Owner' AND Project.idProject = Joined.idProject AND Project.private = true)
   THEN
     RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
@@ -1734,10 +1708,10 @@ $BODY$
 $BODY$
 LANGUAGE plpgsql;
 
-CREATE TRIGGER onUpdateUser BEFORE UPDATE ON plenum.UserTable
+CREATE TRIGGER onUpdateUser BEFORE UPDATE ON UserTable
 FOR EACH ROW
 WHEN (new.premium = false)
-EXECUTE PROCEDURE plenum.updateUserTable();
+EXECUTE PROCEDURE updateUserTable();
 ```
 
 <table>
@@ -1754,11 +1728,11 @@ EXECUTE PROCEDURE plenum.updateUserTable();
 </table>
 
 ```SQL
-CREATE OR REPLACE FUNCTION plenum.onlyOneOwner() RETURNS TRIGGER AS
+CREATE OR REPLACE FUNCTION onlyOneOwner() RETURNS TRIGGER AS
 $BODY$
   BEGIN
   IF EXISTS (
-    SELECT * FROM plenum.Joined
+    SELECT * FROM Joined
     WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner')
   THEN
     RAISE EXCEPTION 'A Project can only have one owner.';
@@ -1768,10 +1742,10 @@ $BODY$
 $BODY$
 LANGUAGE plpgsql;
 
-CREATE TRIGGER onCreateJoined BEFORE INSERT ON plenum.Joined
+CREATE TRIGGER onCreateJoined BEFORE INSERT ON Joined
 FOR EACH ROW
 WHEN (new.role = 'Owner')
-EXECUTE PROCEDURE plenum.onlyOneOwner();
+EXECUTE PROCEDURE onlyOneOwner();
 ```
 
 ## 4. Complete SQL Code
