Revision history :pencil2:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -2615,15 +2615,15 @@ insert into bannedrecord (startDate, duration, motive, idUser, idAdmin) values (
 ```
 [Link to the SQL script included in the repository.](https://github.com/mpcmarques/lbaw1743/blob/master/database/inserts.sql)
 
-<!-- ## Revision history
+## Revision history
 
 Changes made to the first submission:
-1. Item 1
-1. Item 2 -->
+1. Removed schema indication, opting by the use of SET SCHEMA instructions.
+2. Improved Full text search indexes.
 
 ***
 
-GROUP1743, 01/04/2018
+GROUP1743, 09/04/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
