--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1278,13 +1278,13 @@ CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td>To improve performance of full text search while searching for usernames; GIN because usernames never changes.</td>
+      <td>To improve performance of full text search while searching for usernames; GIN because usernames never changes and name changes are rare.</td>
     </tr>
   </tbody>
 </table>
 
 ```SQL
-CREATE INDEX search_username ON UserTable USING GIN (to_tsvector('english', username));
+CREATE INDEX search_username ON UserTable USING GIN (to_tsvector('english', username || name));
 ```
 
 <table>
@@ -1292,43 +1292,6 @@ CREATE INDEX search_username ON UserTable USING GIN (to_tsvector('english', user
     <tr>
       <td><b>Index reference</b></td>
       <td>IDX02</td>
-    </tr>
-    <tr>
-      <td><b>Related queries</b></td>
-      <td>SELECT02</td>
-    </tr>
-    <tr>
-      <td><b>Index relation</b></td>
-      <td>UserTable</td>
-    </tr>
-    <tr>
-      <td><b>Index attribute</b></td>
-      <td>name</td>
-    </tr>
-    <tr>
-      <td><b>Index type</b></td>
-      <td>GIN</td>
-    </tr>
-    <tr>
-      <td><b>Clustering</b></td>
-      <td>No</td>
-    </tr>
-    <tr>
-      <td><b>Justification</b></td>
-      <td>To improve performance of full text search while searching for user full names; GIN because updates in user full names are rare.</td>
-    </tr>
-  </tbody>
-</table>
-
-```SQL
-CREATE INDEX search_user_name ON UserTable USING GIN (to_tsvector('english', name));
-```
-
-<table>
-  <tbody>
-    <tr>
-      <td><b>Index reference</b></td>
-      <td>IDX03</td>
     </tr>
     <tr>
       <td><b>Related queries</b></td>
@@ -1352,57 +1315,20 @@ CREATE INDEX search_user_name ON UserTable USING GIN (to_tsvector('english', nam
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td>To improve performance of full text search while searching for project names; GIN because updates in the project name are rare.</td>
+      <td>To improve performance of full text search while searching for project names; GIN because updates in the project name and description are rare.</td>
     </tr>
   </tbody>
 </table>
 
 ```SQL
-CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', name));
+CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', name || description));
 ```
 
 <table>
   <tbody>
     <tr>
       <td><b>Index reference</b></td>
-      <td>IDX04</td>
-    </tr>
-    <tr>
-      <td><b>Related queries</b></td>
-      <td>SELECT09</td>
-    </tr>
-    <tr>
-      <td><b>Index relation</b></td>
-      <td>Project</td>
-    </tr>
-    <tr>
-      <td><b>Index attribute</b></td>
-      <td>description</td>
-    </tr>
-    <tr>
-      <td><b>Index type</b></td>
-      <td>GisT</td>
-    </tr>
-    <tr>
-      <td><b>Clustering</b></td>
-      <td>No</td>
-    </tr>
-    <tr>
-      <td><b>Justification</b></td>
-      <td>To improve performance of full text search while searching for project description; GisT because the project description is dynamic.</td>
-    </tr>
-  </tbody>
-</table>
-
-```SQL
-CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('english', description));
-```
-
-<table>
-  <tbody>
-    <tr>
-      <td><b>Index reference</b></td>
-      <td>IDX05</td>
+      <td>IDX03</td>
     </tr>
     <tr>
       <td><b>Related queries</b></td>
@@ -1426,50 +1352,13 @@ CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('engl
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td>To improve performance of full text search while searching for tasks; GIN because the updates in the task name are rare.</td>
+      <td>To improve performance of full text search while searching for tasks; GIN because the updates in the task title and description are rare.</td>
     </tr>
   </tbody>
 </table>
 
 ```SQL
-CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', title));
-```
-
-<table>
-  <tbody>
-    <tr>
-      <td><b>Index reference</b></td>
-      <td>IDX06</td>
-    </tr>
-    <tr>
-      <td><b>Related queries</b></td>
-      <td>SELECT17, SELECT18, SELECT19</td>
-    </tr>
-    <tr>
-      <td><b>Index relation</b></td>
-      <td>Task</td>
-    </tr>
-    <tr>
-      <td><b>Index attribute</b></td>
-      <td>description</td>
-    </tr>
-    <tr>
-      <td><b>Index type</b></td>
-      <td>GisT</td>
-    </tr>
-    <tr>
-      <td><b>Clustering</b></td>
-      <td>No</td>
-    </tr>
-    <tr>
-      <td><b>Justification</b></td>
-      <td>To improve performance of full text search while searching for tasks; GisT because the task description is dynamic.</td>
-    </tr>
-  </tbody>
-</table>
-
-```SQL
-CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', description));
+CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', title || description));
 ```
 
 ## 3. Triggers
