--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1258,7 +1258,7 @@ CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);
 </table>
 
 ```SQL
-CREATE INDEX search_username ON UserTable USING GIN (to_tsvector('english', username || name));
+CREATE INDEX search_user ON UserTable USING GIN (to_tsvector('english', username || name));
 ```
 
 <table>
@@ -1295,7 +1295,7 @@ CREATE INDEX search_username ON UserTable USING GIN (to_tsvector('english', user
 </table>
 
 ```SQL
-CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', name || description));
+CREATE INDEX search_project ON Project USING GIN (to_tsvector('english', name || description));
 ```
 
 <table>
@@ -1332,7 +1332,7 @@ CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', na
 </table>
 
 ```SQL
-CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', title || description));
+CREATE INDEX search_task ON Task USING GIN (to_tsvector('english', title || description));
 ```
 
 ## 3. Triggers
