Implemented User Stories :pencil2:

--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -8,6 +8,45 @@ The Vertical Prototype includes the implementation of two or more user stories (
 
 > Identify the user stories that were implemented in the prototype.
 
+<table>
+  <tr>
+    <th>User Story reference</th>
+    <th>Name</th>
+    <th>Priority</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td>US01</td>
+    <td>...</td>
+    <td>...</td>
+    <td>...</td>
+  </tr>
+  <tr>
+  <td>US01</td>
+  <td>...</td>
+  <td>...</td>
+  <td>...</td>
+  </tr>
+  <tr>
+  <td>US01</td>
+  <td>...</td>
+  <td>...</td>
+  <td>...</td>
+  </tr>
+  <tr>
+  <td>US01</td>
+  <td>...</td>
+  <td>...</td>
+  <td>...</td>
+  </tr>
+  <tr>
+  <td>US01</td>
+  <td>...</td>
+  <td>...</td>
+  <td>...</td>
+  </tr>
+</table>
+
 
 ### 1.2. Implemented Web Resources
 
