fixed A7 errors :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -52,6 +52,11 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Group of users that can create and contribute to projects, both private and public.</td>
   </tr>
   <tr>
+    <th>OUSR</th>
+    <td>Own Authenticated User</td>
+    <td>Group of users that can edit their own profile.</td>
+  </tr>
+  <tr>
     <th>MEM</th>
     <td>Project Member</td>
     <td>Group of users that can contribute to projects, creating and solving tasks.</td>
@@ -83,44 +88,13 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Authentication and Individual Profile
 
-- R101: Login Modal ```/```
-- R102: Login Action ```/``` <!-- TODO -->
-- R103: Logout Action ```/``` <!-- TODO -->
-- R104: Register Modal ```/``` <!-- TODO -->
-- R105: Register Action ```/``` <!-- TODO -->
-- R106: View Profile ```/profile/{id}```
-- R107: Edit Profile Modal ```/profile```
-- R108: Edit Profile Action ```/profile/{id}/edit``` <!-- TODO -->
+- R101: Login Action ```/``` <!-- TODO -->
+- R102: Logout Action ```/``` <!-- TODO -->
+- R103: Register Action ```/``` <!-- TODO -->
+- R104: View Profile ```/profile/{id}```
+- R105: Edit Profile Action ```/profile/{id}/edit``` <!-- TODO -->
 
-#### R101: Login Modal
-<table>
-  <tr>
-    <th>URL</th>
-    <td>/</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td>Page with a modal to login to a user account.</td>
-  </tr>
-  <tr>
-    <th>Method</th>
-    <td>GET</td>
-  </tr>
-  <tr>
-    <th>UI</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui05-log-in">UI05</a></td>
-  </tr>
-  <tr>
-    <th>SUBMIT</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r102-login-action">R102</a></td>
-  </tr>
-  <tr>
-    <th>Permissions</th>
-    <td>VIS</td>
-  </tr>
-</table>
-
-#### R102: Login Action
+#### R101: Login Action
 <table>
   <tr>
     <th>URL</th>
@@ -160,7 +134,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R103: Logout Action
+#### R102: Logout Action
 <table>
   <tr>
     <th>URL</th>
@@ -185,35 +159,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R104: Register Modal
-<table>
-  <tr>
-    <th>URL</th>
-    <td>/</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td>Page with a modal to register a new user account.</td>
-  </tr>
-  <tr>
-    <th>Method</th>
-    <td>GET</td>
-  </tr>
-  <tr>
-    <th>UI</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui06-register">UI06</a></td>
-  </tr>
-  <tr>
-    <th>SUBMIT</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r105-register-action">R105</a></td>
-  </tr>
-  <tr>
-    <th>Permissions</th>
-    <td>VIS</td>
-  </tr>
-</table>
-
-#### R105: Register Action
+#### R103: Register Action
 <table>
   <tr>
     <th>URL</th>
@@ -278,7 +224,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R106: View Profile
+#### R104: View Profile
 <table>
   <tr>
     <th>URL</th>
@@ -307,40 +253,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R107: Edit Profile Modal
-<table>
-  <tr>
-    <th>URL</th>
-    <td colspan="2">/profile/{id}</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td colspan="2">Page with a modal to edit individual profile information.</td>
-  </tr>
-  <tr>
-    <th>Method</th>
-    <td colspan="2">GET</td>
-  </tr>
-  <tr>
-    <th>Parameters</th>
-    <td>+id:integer</td>
-    <td>User Primary Key</td>
-  </tr>
-  <tr>
-    <th>UI</th>
-   <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui20-edit-profile">UI20</a></td>
-  </tr>
-  <tr>
-    <th>SUBMIT</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r108-edit-profile-action">R108</a></td>
-  </tr>
-  <tr>
-    <th>Permissions</th>
-    <td colspan="2">USR</td>
-  </tr>
-</table>
-
-#### R108: Edit Profile Action
+#### R105: Edit Profile Action
 <table>
   <tr>
     <th>URL</th>
@@ -391,22 +304,22 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th></th>
-    <td>+picture: picture</td>
+    <td>+picture: file</td>
     <td>Profile Picture</td>
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r106-view-profile">R106</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-view-profile">R104</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r107-edit-profile-modal">R107</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-view-profile">R104</a></td>
     <td>Error</td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td colspan="2">VIS</td>
+    <td colspan="2">OUSR</td>
   </tr>
 </table>
 
@@ -611,7 +524,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Permissions</th>
-    <td colspan="2">MEM</td>
+    <td colspan="2">COO</td>
   </tr>
 </table>
 
@@ -640,7 +553,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Permissions</th>
-    <td colspan="2">MEM</td>
+    <td colspan="2">USR</td>
   </tr>
 </table>
 
@@ -673,12 +586,12 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project type (public or private)</td>
   </tr>
     <tr>
-    <td>+img: string?</td>
+    <td>+img: file</td>
     <td>Project thumbnail picture</td>
   </tr>
   <tr>
     <th>Redirects</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r304-create-project-form">R304</a></th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r304-create-project-form">R304</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -695,7 +608,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Description</th>
-    <td colspan="2">Shows project members.</td>
+    <td colspan="2">Shows Project Members.</td>
   </tr>
   <tr>
     <th>Method</th>
@@ -729,7 +642,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Method</th>
-    <td colspan="2">Delete</td>
+    <td colspan="2">DELETE</td>
   </tr>
   <tr>
     <th>Parameters</th>
@@ -743,7 +656,7 @@ The architecture of our **Project Management** web application to develop is doc
 
   <tr>
     <th>Permissions</th>
-    <td colspan="2">OWN, COO</td>
+    <td colspan="2">COO</td>
   </tr>
 </table>
 
@@ -773,11 +686,11 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Submit</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r309-edit-project-task-action">R309</a></th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r309-edit-project-task-action">R309</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td colspan="2">MEM</td>
+    <td colspan="2">COO</td>
   </tr>
 </table>
 
@@ -811,7 +724,7 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project Description</td>
   </tr>
   <tr>
-    <td>?img: string?</td>
+    <td>?img: file?</td>
     <td>Project Thumbnail Path</td>
   </tr>
   <tr>
@@ -819,7 +732,7 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
   </tr>
     <th>Permissions</th>
-    <td colspan="2">OWN, COO</td>
+    <td colspan="2">COO</td>
   </tr>
 </table>
 </table>
@@ -833,15 +746,11 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Description</th>
-     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/images/Interface/Desktop/UI28_New_Task.png">UI28</a></td></td>
+     <td colspan="2">Page with form to create new Project Task.</td>
   </tr>
   <tr>
     <th>Method</th>
     <td colspan="2">GET</td>
-  </tr>
-   <tr>
-    <th>UI</th>
-    <td colspan="2">https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/images/Interface/Desktop/UI28_New_Task.png</td>
   </tr>
     <tr>
     <th>Parameters</th>
@@ -850,11 +759,11 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Redirects</th>
-     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/images/Interface/Desktop/UI28_New_Task.png">UI10</a></td>
+     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui17-task-page>UI17</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td colspan="2">USR</td>
+    <td colspan="2">MEM</td>
   </tr>
 </table>
 
@@ -893,11 +802,11 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r310-create-project-task-form">R310</a></th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui17-task-page>UI17</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td colspan="2">USR</td>
+    <td colspan="2">MEM</td>
   </tr>
 </table>
 
@@ -932,7 +841,7 @@ The architecture of our **Project Management** web application to develop is doc
 
   <tr>
     <th>Permissions</th>
-    <td colspan="2">OWN, COO</td>
+    <td colspan="2">COO</td>
   </tr>
 </table>
 
@@ -1011,7 +920,6 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2">OWN, COO</td>
   </tr>
 </table>
-</table>
 
 #### R315: Edit Project Action
 
@@ -1061,8 +969,11 @@ The architecture of our **Project Management** web application to develop is doc
 #### Endpoints of Module Search Engine
 
 - R401: Search Projects Action ```/search_projects```
-- R402: Search Users Action ```/search_users```
-- R403: Search Tasks Action ```/search_tasks```
+- R402: Search Projects API ```/api/search_projects```
+- R403: Search Users Action ```/search_users```
+- R404: Search Users API ```/api/search_projects```
+- R405: Search Tasks Action ```/search_tasks```
+- R406: Search Tasks API ```/api/search_projects```
 
 #### R401: Search Projects Action
 <table>
@@ -1089,6 +1000,35 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>AJAX Calls</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r402-search-projects-api">R402</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">USR, VIS</td>
+  </tr>
+</table>
+
+#### R402: Search Projects API
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/api/search_projects</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">This web resource searches the system for projects and returns the results.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>?title: string</td>
+    <td>Project Name</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#json401-search-projects-projects">JSON401</a></td>
   </tr>
   <tr>
@@ -1097,7 +1037,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R402: Search Users Action
+#### R403: Search Users Action
 <table>
   <tr>
     <th>URL</th>
@@ -1122,6 +1062,35 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>AJAX Calls</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r404-search-users-api">R404</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">USR, VIS</td>
+  </tr>
+</table>
+
+#### R404: Search Users API
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/api/search_users</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">This web resource searches the system for users and returns the results.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>?title: string</td>
+    <td>Project Name</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#json402-search-users-users">JSON402</a></td>
   </tr>
   <tr>
@@ -1130,7 +1099,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R403: Search Tasks Action
+#### R405: Search Tasks Action
 <table>
   <tr>
     <th>URL</th>
@@ -1155,6 +1124,35 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>AJAX Calls</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r406-search-tasks-api">R406</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">USR, VIS</td>
+  </tr>
+</table>
+
+#### R406: Search Tasks API
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/api/search_tasks</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">This web resource searches the system for tasks and returns the results.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>?title: string</td>
+    <td>Project Name</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#json403-search-tasks-tasks">JSON403</a></td>
   </tr>
   <tr>
@@ -1170,13 +1168,11 @@ The architecture of our **Project Management** web application to develop is doc
 - R501: Admin Login Form ```/admin```
 - R502: Admin Login Action ```/admin```
 - R503: View Projects ```/admin/projects```
-- R504: Edit Project Modal ```/admin/projects/```
-- R505: Edit Project Action ```/admin/projects/edit```
-- R506: Remove Project Action ```/admin/projects/remove```
-- R507: View Users ```/admin/users```
-- R508: Edit User Modal ```/admin/users/```
-- R509: Edit User Action ```/admin/users/edit```
-- R510: Remove User Action ```/admin/users/remove```
+- R504: Edit Project Action ```/admin/projects/edit```
+- R505: Remove Project Action ```/admin/projects/remove```
+- R506: View Users ```/admin/users```
+- R507: Edit User Action ```/admin/users/edit```
+- R508: Remove User Action ```/admin/users/remove```
 
 #### R501: Admin Login Form
 <table>
@@ -1262,27 +1258,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R504: Edit Project Modal
-<table>
-  <tr>
-    <th>URL</th>
-    <td>/admin/projects/</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td>Page with a modal to edit information about one project.</td>
-  </tr>
-  <tr>
-    <th>UI</th>
-    <td><!-- <a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui25-administration-manage-projects">UI25</a>--></td>
-  </tr>
-  <tr>
-    <th>Permissions</th>
-    <td>ADM</td>
-  </tr>
-</table>
-
-#### R505: Edit Project Action
+#### R504: Edit Project Action
 <table>
   <tr>
     <th>URL</th>
@@ -1317,7 +1293,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R506: Remove Project Action
+#### R505: Remove Project Action
 <table>
   <tr>
     <th>URL</th>
@@ -1352,7 +1328,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R507: View Users
+#### R506: View Users
 <table>
   <tr>
     <th>URL</th>
@@ -1372,27 +1348,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R508: Edit User Modal
-<table>
-  <tr>
-    <th>URL</th>
-    <td>/admin/users/</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td>Page with a modal to edit information about one user.</td>
-  </tr>
-  <tr>
-    <th>UI</th>
-    <td><!-- <a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui25-administration-manage-projects">UI25</a>--></td>
-  </tr>
-  <tr>
-    <th>Permissions</th>
-    <td>ADM</td>
-  </tr>
-</table>
-
-#### R509: Edit User Action
+#### R507: Edit User Action
 <table>
   <tr>
     <th>URL</th>
@@ -1427,7 +1383,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R510: Remove User Action
+#### R508: Remove User Action
 <table>
   <tr>
     <th>URL</th>
